[package]
name = "clawdesk-extensions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Declarative integration framework with credential vault, OAuth PKCE, and health monitoring"

[dependencies]
# Internal
clawdesk-types = { workspace = true }

# Async
tokio = { workspace = true, features = ["net", "io-util", "fs"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
sha2 = { workspace = true }
hex = { workspace = true }
rand = "0.8"

# Concurrency
dashmap = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
