[package]
name = "clawdesk-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model Context Protocol (MCP) client and server for ClawDesk"

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
# Internal
clawdesk-types = { workspace = true }
clawdesk-browser = { workspace = true }

# Async
tokio = { workspace = true, features = ["io-util", "io-std", "process"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
